force-app/main/default/objects/P__c/P__c.object-meta.xml
<CustomObject>
    <label>Plano de Ação</label>
    <nameField>
        <displayFormat>PA - {0000}</displayFormat>
        <label>Nome do Plano de ação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planos de Ação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>