force-app/main/default/objects/P__c/fields/Acao_corretiva__c.field-meta.xml
<CustomField>
    <fullName>Acao_corretiva__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ação corretiva</label>
    <referenceTo>Acao_corretiva__c</referenceTo>
    <relationshipLabel>Planos de Ação</relationshipLabel>
    <relationshipName>Planos_de_A_o</relationshipName>
    <type>Lookup</type>
</CustomField>