force-app/main/default/objects/P__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Planos de Ação</relationshipLabel>
    <relationshipName>Planos_de_A_o</relationshipName>
    <type>Lookup</type>
</CustomField>