force-app/main/default/objects/P__c/fields/Data_finalizacao__c.field-meta.xml
<CustomField>
    <fullName>Data_finalizacao__c</fullName>
    <label>Data finalização</label>
    <type>Date</type>
</CustomField>