force-app/main/default/objects/P__c/fields/Descri_o_RCA__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_RCA__c</fullName>
    <formula>Acao_corretiva__r.A_o_Corretiva_Detalhada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição RAC</label>
    <type>Text</type>
</CustomField>