force-app/main/default/objects/P__c/fields/N_o_Conformidade__c.field-meta.xml
<CustomField>
    <fullName>N_o_Conformidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Não Conformidade</label>
    <referenceTo>Nao_Conformidade__c</referenceTo>
    <relationshipLabel>Planos de Ação</relationshipLabel>
    <relationshipName>Planos_de_A_o</relationshipName>
    <type>Lookup</type>
</CustomField>