force-app/main/default/objects/P__c/fields/Respons_vel_envolvido_1__c.field-meta.xml
<CustomField>
    <fullName>Respons_vel_envolvido_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável envolvido 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Planos de Ação (Responsável envolvido 1)</relationshipLabel>
    <relationshipName>Planos_de_A_o1</relationshipName>
    <type>Lookup</type>
</CustomField>