force-app/main/default/objects/P__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <formula>Acao_corretiva__r.Responsevel__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsavel</label>
    <type>Text</type>
</CustomField>