force-app/main/default/objects/P__c/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <label>Setor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Serviços</fullName>
            </value>
            <value>
                <fullName>Administrativo</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Locação</fullName>
            </value>
            <value>
                <fullName>Todos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>