force-app/main/default/objects/P__c/fields/Solu_o_eficaz__c.field-meta.xml
<CustomField>
    <fullName>Solu_o_eficaz__c</fullName>
    <label>Solução eficaz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÂO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>