force-app/main/default/objects/P__c/fields/Unidade_auditada__c.field-meta.xml
<CustomField>
    <fullName>Unidade_auditada__c</fullName>
    <formula>Auditoria__r.Empresa_Auditada__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidade auditada</label>
    <type>Text</type>
</CustomField>