force-app/main/default/objects/P__c/validationRules/VERIFICA_aud_rca_rnc.validationRule-meta.xml
<ValidationRule>
    <fullName>VERIFICA_aud_rca_rnc</fullName>
    <active>false</active>
    <errorConditionFormula>(N_o_Conformidade__c = &quot;&quot; ||  Auditoria__c = &quot;&quot; ||  Acao_corretiva__c = &quot;&quot;)</errorConditionFormula>
    <errorMessage>Certifique-se de criar esse registro a partir de uma Ação corretiva</errorMessage>
</ValidationRule>